feat: createCategories seed

--- a/back/package.json
+++ b/back/package.json
@@ -7,6 +7,7 @@
     "build": "npx tsc",
     "start": "node dist/src/server.js",
     "dev": "nodemon src/server.ts",
+    "dev:seed": " prisma db seed",
     "test:migration:run":"dotenv -e .env.test prisma migrate deploy",
     "test": "dotenv -e .env.test jest -- -i",
     "test:coverage": "dotenv -e .env.test jest -- --coverage --runInBand "
