--- a/front/package.json
+++ b/front/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.1-0",
+    "react-router-dom": "^6.21.0",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
